# HardwareModule

./: .gitignore
src/: CMakeLists.txt  MqttClient.cpp  MqttClient.h  clean.sh  main.cpp  states.h  stopwatch.h  topics.h  utils.h
src/ModbusLib/: Readme.txt  main.cpp  modbus.cpp  modbus.hpp  modbus_ls.cpp  modbus_ls.hpp  modbus_ls_dust.cpp  modbus_ls_dust.hpp  modbus_reg.h  serial.cpp  serial.hpp
src/Template/: Readme.txt
src/Template/mqtt_control/: mqtt_control.h
test_gui/HardwareGUI/: CMakeLists.txt  README.md  build_HardwareGUI.sh  logmodel.cpp  logmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  topicfilterproxymodel.cpp  topicfilterproxymodel.h  topics.h
test_gui/HardwareGUI_app/: HardwareGUI.sh
test_gui/HardwareGUI_app/lib/: libQt5Mqtt.so.5  libQt5Network.so.5
